[package]
name = "sleet-live-indexer-rs"
version = "0.1.0"
edition = "2024"
# ===========================================
[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
# NEAR official primitives
near-primitives = "0.24.0"
# SSE client
eventsource-client = "0.13"
tokio-stream = "0.1.18"
# HTTP client (use rustls instead of OpenSSL)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# Base64 decoding for transaction args
base64 = "0.22"
# Timestamps for error logging
chrono = { version = "0.4", features = ["serde"] }
# SQLite database
rusqlite = { version = "0.31", features = ["bundled"] }
# ===========================================
# ===========================================
# copyright 2026 by sleet.near
